--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Add your responsive styles here */
 body {
     font-family: Arial, sans-serif;
 }
@@ -21,3 +22,4 @@ label, input, button {
         width: 95%;
     }
 }
+
